<resources>
    <string name="app_name">Tesi</string>
    <string name="welcome_message">Tesi</string>
    <string name="button_scan">SCAN</string>
    <string name="button_stop">STOP</string>

    <!--Toasts-->
    <string name="ble_not_supported">Your device does not support Bluetooth Low Energy</string>

    <!--SensorsInfo-->
    <string name="textView_SI">terminal:~$</string>
    <string name="textview_connection_state">Connection State</string>
    <string name="textview_temp_value">Temperature is</string>
    <string name="textView_device_info">Device Info</string>
    <string name="textView_device_infos">Address: \n\n Name:</string>

    <!--Toolbars-->
    <string name="toolbar_main_scan">SCAN</string>
    <string name="toolbar_main_stopScan">STOP SCAN</string>
    <string name="toolbar_main_about">About</string>
    <string name="toolbar_main_adapter_info">Phone Info</string>
    <string name="menu_connect">CONNECT</string>
    <string name="menu_disconnect">DISCONNECT</string>
    <string name="toolbar_sensors_rssi">RSSI Graph</string>
    <string name="toolbar_sensors_mqtt">Send Data To Cloud</string>
    <string name="title_activity_mqtt_connectiojn">mqttConnectiojn</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

</resources>
