<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_connect"
        android:title="@string/menu_connect"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_disconnect"
        android:title="@string/menu_disconnect"
        app:showAsAction="always"
        android:visible="false"/>

    <item
        android:id="@+id/action_emergency"
        android:icon="@drawable/sos"
        app:showAsAction="always"
        android:title="" />

    <item android:id="@+id/action_connect_to_peripheral"
        android:title="Scan Remote Devices"
        app:showAsAction="never"
        android:enabled="true"/>

    <item android:id="@+id/action_mqtt"
        android:title="@string/toolbar_sensors_mqtt"
        app:showAsAction="never"
        android:enabled="false"/>

    <item android:id="@+id/action_graph_rssi"
        android:title="@string/toolbar_sensors_rssi"
        app:showAsAction="never"/>

    <item android:id="@+id/action_settings"
        android:title="Settings"
        app:showAsAction="never"
        android:enabled="true"/>

    <item android:id="@+id/action_about"
        android:title="@string/toolbar_main_about"
        app:showAsAction="never"/>


</menu>